# Nyx-AI

./: README.md  config.py  list_models.py  nyx_main.py  pyproject.toml  requirements.txt
modules/: chat.py  memory.py
